Fix stat section overflow

--- a/static/index.css
+++ b/static/index.css
@@ -34,11 +34,10 @@ li {
 .container {
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: 4fr 1fr;
   grid-template-areas: 
   "nav nav main main main main main news news news"
   "nav nav stat stat stat stat stat stat stat stat";
-  height: 96vh;
+  height: 100vh;
   background-color: #152028;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
@@ -51,10 +50,11 @@ li {
   grid-area: nav;
   display: flex;
   flex-direction: column;
-  min-width: 20vw;
   overflow: hidden;
   border-right: 0.2vw solid #2a3945;
   padding: 0 1vw;
+  height: 96vh;
+  width: 19.2vw;
 }
 .logo {
   grid-area: logo;
@@ -108,12 +108,14 @@ section a div img {
 .main {
   grid-area: main;
   text-align: center;
-  min-width: 50vw;
   padding: 0 3vw;
+  width: 48vw;
+  height: 67vh;
+  overflow: hidden;
 }
 .search-bar {
   grid-area: search;
-  min-width: 50vw;
+  width: 48vw;
   height: var(--header-height);
 }
 .search-container {
@@ -240,7 +242,7 @@ h2 div {
 }
 .news {
   grid-area: news;
-  min-width: 30vw;
+  width: 28.8vw;
 }
 .user-status {
   grid-area: user;
@@ -260,6 +262,7 @@ h2 div {
 }
 .stat {
   grid-area: stat;
+  height: 24vh;
 }
 .currentpage {
   background-color: #101b23 ;
@@ -436,7 +439,7 @@ h2 div {
   width: 20vh;
 }
 .stat {
-  padding: 3vw;
+  padding: 0 3vw;
 }
 .stat div {
   display: flex;
